--- a/app/src/main/res/layout/activity_confirm_payment.xml
+++ b/app/src/main/res/layout/activity_confirm_payment.xml
@@ -54,7 +54,7 @@
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_medium"
             android:textStyle="bold"
-            tools:text="3434 7474 7474 8484"/>
+            tools:text="BB00 0000 1210 0233"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -66,36 +66,36 @@
             android:textColor="@color/primary"
             android:textSize="@dimen/text_size_medium"/>
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvBalance"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:orientation="horizontal">
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/montserrat_light"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_medium"
+            android:textStyle="bold"
+            tools:text="4.51735 mBtc"/>
 
-            <TextView
-                android:id="@+id/tvBalance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="4dp"
-                android:fontFamily="@font/montserrat_light"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_medium"
-                android:textStyle="bold"
-                tools:text="0.844"/>
+        <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="16dp"-->
+        <!--android:orientation="horizontal">-->
 
-            <TextView
-                android:id="@+id/tvBalanceEquivalent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="4dp"
-                android:fontFamily="@font/montserrat_light"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="@dimen/text_size_1_small"
-                tools:text="343"/>
+        <!--<TextView-->
+        <!--android:id="@+id/tvBalanceEquivalent"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="4dp"-->
+        <!--android:fontFamily="@font/montserrat_light"-->
+        <!--android:textColor="@android:color/darker_gray"-->
+        <!--android:textSize="@dimen/text_size_1_small"-->
+        <!--tools:text="343"/>-->
 
-        </LinearLayout>
+        <!--</LinearLayout>-->
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -123,8 +123,7 @@
             android:id="@+id/etWallet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+
             android:enabled="false"
             android:fontFamily="@font/montserrat_light"
             android:hint="@string/target_wallet_address"
@@ -169,15 +168,12 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp">
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/etAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="16dp"
                 android:enabled="false"
                 android:fontFamily="@font/montserrat_light"
                 android:hint="@string/payment_amount"
@@ -188,38 +184,38 @@
                 android:textSize="@dimen/text_size_large"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/tvCurrency"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@+id/tvCurrency"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/tvCurrency"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="@font/montserrat_light"
                 android:text="@string/m_btc"
                 android:textSize="@dimen/text_size_large"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/tvAmountEquivalent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/etAmount"
                 app:layout_constraintTop_toTopOf="parent"/>
 
-            <TextView
-                android:id="@+id/tvAmountEquivalent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
-                android:layout_marginTop="12dp"
-                android:fontFamily="@font/montserrat_light"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="@dimen/text_size_1_small"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="0000"/>
+            <!--<TextView-->
+            <!--android:id="@+id/tvAmountEquivalent"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginEnd="12dp"-->
+            <!--android:layout_marginTop="12dp"-->
+            <!--android:fontFamily="@font/montserrat_light"-->
+            <!--android:textColor="@android:color/darker_gray"-->
+            <!--android:textSize="@dimen/text_size_1_small"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--app:layout_constraintEnd_toEndOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="parent"-->
+            <!--tools:text="0000"/>-->
 
         </android.support.constraint.ConstraintLayout>
 
@@ -334,18 +330,18 @@
                 app:layout_constraintLeft_toRightOf="@+id/etFee"
                 app:layout_constraintTop_toTopOf="parent"/>
 
-            <TextView
-                android:id="@+id/tvFeeEquivalent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:fontFamily="@font/montserrat_light"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="@dimen/text_size_1_small"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@+id/tvCurrency2"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="000"/>
+            <!--<TextView-->
+            <!--android:id="@+id/tvFeeEquivalent"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginStart="8dp"-->
+            <!--android:fontFamily="@font/montserrat_light"-->
+            <!--android:textColor="@android:color/darker_gray"-->
+            <!--android:textSize="@dimen/text_size_1_small"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--app:layout_constraintLeft_toRightOf="@+id/tvCurrency2"-->
+            <!--app:layout_constraintTop_toTopOf="parent"-->
+            <!--tools:text="000"/>-->
 
         </android.support.constraint.ConstraintLayout>
 
@@ -353,16 +349,10 @@
 
     <Button
         android:id="@+id/btnSend"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        style="@style/AppTheme.RoundedCornerMaterialButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:backgroundTint="@color/colorPrimary"
-        android:fontFamily="@font/raleway_r"
-        android:includeFontPadding="false"
+        android:layout_marginBottom="16dp"
         android:text="@string/send_1"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_size_large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
