--- a/app/src/main/res/layout/fr_verify_card.xml
+++ b/app/src/main/res/layout/fr_verify_card.xml
@@ -11,31 +11,6 @@
     tools:context="com.tangem.presentation.fragment.VerifyCard"
     tools:showIn="@layout/activity_verify_card">
 
-    <RelativeLayout
-        android:id="@+id/rlToolButtons"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnOk"
-                style="@style/AppTheme.RoundedCornerMaterialButton"
-                android:layout_width="match_parent"
-                android:text="@string/ok"/>
-
-        </LinearLayout>
-
-    </RelativeLayout>
-
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_container"
         android:layout_width="0dp"
@@ -576,5 +551,22 @@
         </RelativeLayout>
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <RelativeLayout
+        android:id="@+id/rlToolButtons"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <Button
+            android:id="@+id/btnOk"
+            style="@style/AppTheme.RoundedCornerMaterialButton"
+            android:layout_width="match_parent"
+            android:layout_marginBottom="8dp"
+            android:text="@string/ok"/>
+
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
