--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,10 +71,16 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imHand"
+                    android:id="@+id/ivHandCardHorizontal"
                     android:layout_width="190dp"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/hand_card"/>
+                    app:srcCompat="@drawable/hand_card_horizontal"/>
+
+                <ImageView
+                    android:id="@+id/ivHandCardVertical"
+                    android:layout_width="190dp"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/hand_card_vertical"/>
 
             </LinearLayout>
 
