--- a/app/src/main/res/layout/fr_loaded_wallet.xml
+++ b/app/src/main/res/layout/fr_loaded_wallet.xml
@@ -68,7 +68,8 @@
                         android:layout_height="180dp"
                         android:layout_centerHorizontal="true"
                         android:elevation="3dp"
-                        android:visibility="gone">
+                        android:visibility="gone"
+                        tools:visibility="visible">
 
                         <TextView
                             android:id="@+id/textView10"
@@ -431,7 +432,8 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textStyle="normal|bold"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            tools:visibility="visible"/>
 
         <TextView
             android:id="@+id/tvError"
@@ -448,7 +450,8 @@
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textStyle="bold"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            tools:visibility="visible"/>
 
     </RelativeLayout>
 
@@ -570,10 +573,5 @@
             android:textSize="@dimen/text_size_small"/>
 
     </RelativeLayout>
-
-    <!--<include-->
-    <!--layout="@layout/layout_progress_horizontal"-->
-    <!--android:visibility="gone"-->
-    <!--tools:layout_editor_absoluteY="495dp" />-->
 
 </android.support.constraint.ConstraintLayout>
