--- a/app/src/main/res/layout/fr_loaded_wallet.xml
+++ b/app/src/main/res/layout/fr_loaded_wallet.xml
@@ -24,7 +24,6 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
-            android:id="@+id/rlCardInfo"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -35,20 +34,6 @@
                 android:background="@color/white"
                 android:gravity="center"
                 android:orientation="vertical">
-
-                <!--not used-->
-                <TextView
-                    android:id="@+id/tvCaution"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:background="@color/msg_err"
-                    android:fontFamily="@font/raleway_r"
-                    android:gravity="center_vertical"
-                    android:text="@string/do_not_accept"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/text_size_1_small"
-                    android:visibility="gone"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -96,6 +81,7 @@
                             android:progressTint="@color/colorPrimary"/>
 
                     </RelativeLayout>
+
                 </RelativeLayout>
 
                 <LinearLayout
@@ -116,6 +102,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/montserrat_light"
+                            android:paddingLeft="10dp"
                             android:paddingRight="10dp"
                             android:text="@string/no_data_string"
                             android:textAlignment="center"
@@ -144,8 +131,9 @@
                         android:layout_marginTop="5dp"
                         android:fontFamily="@font/montserrat_light"
                         android:textAlignment="center"
-                        android:textColor="@android:color/holo_orange_dark"
-                        android:textSize="18sp"/>
+                        android:textColor="@color/msg_err"
+                        android:textSize="18sp"
+                        tools:text="Verification field"/>
 
                     <TextView
                         android:id="@+id/tvBalanceLine2"
@@ -153,109 +141,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:fontFamily="@font/montserrat_light"
-                        android:textAlignment="center"/>
-
-                </LinearLayout>
-
-                <!--not used-->
-                <TextView
-                    android:id="@+id/tvHeader"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:fontFamily="@font/raleway_r"
-                    android:paddingTop="8dp"
-                    android:text="@string/banknote"
-                    android:textAlignment="center"
-                    android:textColor="@color/primary_dark"
-                    android:textSize="@dimen/text_size_medium"
-                    android:visibility="gone"/>
-
-                <android.support.constraint.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingBottom="2dp"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:paddingTop="2dp"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:id="@+id/tvBalanceLabel"
-                        android:layout_width="110dp"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/raleway_r"
-                        android:gravity="center_vertical"
-                        android:text="@string/balance"
-                        android:textColor="@color/primary_dark"
-                        android:textSize="@dimen/text_size_large"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
-
-                </android.support.constraint.ConstraintLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:orientation="horizontal"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:id="@+id/tvOffline"
-                        android:layout_width="90dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginEnd="20dp"
-                        android:background="@color/msg_okay"
-                        android:fontFamily="@font/montserrat_light"
-                        android:text="@string/verified_offline"
                         android:textAlignment="center"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/text_size_small"/>
-
-                    <TextView
-                        android:id="@+id/tvBalanceEquivalent"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/montserrat_light"
-                        android:textColor="@android:color/darker_gray"
-                        android:textSize="@dimen/text_size_medium"
-                        android:textStyle="normal|bold"
-                        tools:text="USD 0,00"/>
-
-                    <ImageView
-                        android:id="@+id/ivRateSource"
-                        android:layout_width="0dp"
-                        android:layout_height="18dp"
-                        android:layout_gravity="bottom|start"
-                        android:layout_weight="1"
-                        android:alpha="0.4"
-                        android:paddingEnd="8dp"
-                        android:paddingStart="8dp"
-                        android:src="@drawable/coinmarketcap"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:orientation="horizontal"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:layout_width="110dp"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/raleway_r"
-                        android:text="@string/blockchain"
-                        android:textColor="@color/primary_dark"/>
-
+                        tools:text="Do not accept! Wallet verification field. Tap again."/>
 
                 </LinearLayout>
 
@@ -309,105 +196,6 @@
 
                 </LinearLayout>
 
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:orientation="horizontal"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:id="@+id/tvInputs"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/montserrat_light"
-                        android:textColor="@color/primary_dark"
-                        android:textSize="@dimen/text_size_small"
-                        android:textStyle="normal|bold"
-                        tools:text="@string/no_data_string"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:layout_width="110dp"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/raleway_r"
-                        android:text="@string/issuer"
-                        android:textColor="@color/primary_dark"
-                        android:textSize="@dimen/text_size_small"/>
-
-                    <TextView
-                        android:id="@+id/tvIssuer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/montserrat_light"
-                        android:textColor="@color/primary_dark"
-                        android:textSize="@dimen/text_size_small"
-                        android:textStyle="normal|bold"
-                        tools:text="TANGEM"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:layout_width="110dp"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/raleway_r"
-                        android:text="@string/validation_node"
-                        android:textColor="@color/primary_dark"
-                        android:textSize="@dimen/text_size_small"/>
-
-                    <TextView
-                        android:id="@+id/tvValidationNode"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/montserrat_light"
-                        android:textColor="@color/primary_dark"
-                        android:textSize="@dimen/text_size_small"
-                        android:textStyle="normal|bold"
-                        tools:text="Electrum"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/raleway_r"
-                        android:text="@string/swipe_down_to_refresh_data"
-                        android:textAlignment="center"
-                        android:textColor="@android:color/darker_gray"
-                        android:textSize="@dimen/text_size_small"/>
-
-                </LinearLayout>
-
             </LinearLayout>
 
         </RelativeLayout>
@@ -457,14 +245,10 @@
 
     <LinearLayout
         android:id="@+id/rlToolButtons"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
         android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/rlCardIdAndIcons"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btnLoad"
@@ -501,77 +285,5 @@
             android:text="@string/extract"/>
 
     </LinearLayout>
-
-    <!--not used-->
-    <RelativeLayout
-        android:id="@+id/rlCardIdAndIcons"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <ImageView
-            android:id="@+id/ivPIN"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="false"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="4dp"
-            android:layout_toStartOf="@+id/ivPIN2orSecurityDelay"
-            android:elevation="0dp"
-            android:src="@drawable/unlock_pin1"/>
-
-        <ImageView
-            android:id="@+id/ivPIN2orSecurityDelay"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="false"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="4dp"
-            android:elevation="0dp"
-            android:src="@drawable/unlock_pin2"/>
-
-        <ImageView
-            android:id="@+id/ivDeveloperVersion"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="4dp"
-            android:elevation="0dp"
-            android:src="@drawable/ic_developer_version"/>
-
-        <TextView
-            android:id="@+id/tvCardID"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/textView5"
-            android:layout_alignParentEnd="false"
-            android:layout_alignParentStart="true"
-            android:layout_alignWithParentIfMissing="false"
-            android:fontFamily="@font/montserrat_light"
-            android:textAlignment="center"
-            android:textColor="@color/primary_dark"
-            android:textSize="@dimen/text_size_medium"
-            android:textStyle="normal|bold"
-            tools:text="@string/no_data_string_1"/>
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:fontFamily="@font/raleway_r"
-            android:text="@string/scan_again_to_verify_the_card"
-            android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="@dimen/text_size_small"/>
-
-    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
