--- a/app/src/main/res/layout/fr_loaded_wallet.xml
+++ b/app/src/main/res/layout/fr_loaded_wallet.xml
@@ -95,8 +95,9 @@
 
                     <TextView
                         android:id="@+id/tvBalance"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="2"
                         android:fontFamily="@font/montserrat_light"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
@@ -108,9 +109,10 @@
 
                     <TextView
                         android:id="@+id/tvBlockchain"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
+                        android:layout_weight="1"
                         android:fontFamily="@font/montserrat_light"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
